Remove Swagger do projeto e ajusta estrutura da API
